Fix for bug 856, keep grid column headers from wrapping to multiple lines
NOTICE: this will also prevent long multi-word column titles from being wrapped to multiple lines, if you want this you'll have to add a br to the title

--- a/cellini.css
+++ b/cellini.css
@@ -30,6 +30,7 @@ table.grid th { padding: 2px;
 	font-size: 12px;
 	background-color: transparent;
 	vertical-align: bottom;
+	white-space: nowrap;
 }
 table.grid td {
 	margin: 2px;
